--- a/starter/sass/0-base/_reset.scss
+++ b/starter/sass/0-base/_reset.scss
@@ -14,6 +14,9 @@ html {
 
     --font-primary: "Plus Jakarta Sans", sans-serif;
 
+    --font-weight-md: 500;
+    --font-weight-bld: 700;
+
     // Button
     --color-white: #fff;
     --color-primary: #635fc7;
