--- a/starter/sass/2-components/_buttons.scss
+++ b/starter/sass/2-components/_buttons.scss
@@ -104,6 +104,7 @@
 // <!--- Modal View | Buttons --->
 .modal {
     &-close {
+        cursor: pointer;
         @include mixins.cross(18px, #828fa3, 4px);
     }
     &-delete,
@@ -111,8 +112,7 @@
         padding: 5px;
     }
     &-delete,
-    &-edit,
-    &-close {
+    &-edit {
         cursor: pointer;
     }
 }
